@@ -19,6 +19,7 @@ UTILS:
 * UTIL introduce PAN-OS version for each script output
 * UTIL pan-os-php type=device | introduce PAN-OS API. mode for actions=zoneprotectionprofile-create-bp /  logforwardingprofile-create-bp
 * UTIL pan-os-php type=device | actions=securityprofile-create-alert-only introduce PAN-OS API method for FWs
+* UTIL pan-os-php type=device | introduce PAN-OS API call for Panorama for actions=cleanuprule-create-bp /  logforwardingprofile-create-bp / securityprofile-create-alert-only
 
 BUGFIX:
 * update installer scripts / issues with git-php not available
